Fix code blocks spilling off the page

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -49,6 +49,7 @@ pre {
   border-radius: 0.4rem;
   box-shadow: 1px 1px 0 rgba(0, 0, 0, 0.1);
   margin: 1rem -0.75rem 0;
+  overflow-x: auto;
   padding: 0.6rem 0.75rem;
 }
 
